# EchoAIExtensions

./: .gitignore
Channels/wechat/: NOTICE.md  README.md  package-lock.json  package.json
Channels/wechat/src/: api-send.test.ts  cli.ts  gateway-client.test.ts  gateway-client.ts  gateway-lock.test.ts  gateway-lock.ts  orchestrator.ts  outbound-queue.test.ts  outbound-queue.ts
Channels/wechat/src/commands/: login.ts  qr-html.ts  start.ts
Clients/EchoLens/: README.md
Clients/EchoLens/app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
Clients/EchoLens/app/scripts/: gateway-probe.mjs
Clients/EchoLens/app/src-tauri/: Cargo.toml  tauri.conf.json
Clients/EchoLens/app/src-tauri/capabilities/: default.json
Clients/EchoLens/app/src-tauri/examples/: com_apartment_check.rs
Clients/EchoLens/app/src-tauri/src/: capture_thread.rs  cloak.rs  commands.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  state.rs  tray.rs
Clients/EchoLens/docs/: IMPLEMENTATION.md  PRODUCT_DESIGN.md
Clients/EchoLens/echolens-perception/: Cargo.toml  README.md
Clients/EchoLens/echolens-perception/examples/: dump.rs
Clients/EchoLens/echolens-perception/packaging/: README.txt  Run-EchoLens-Probe.bat  build-release.ps1
Clients/EchoLens/echolens-perception/src/: error.rs  lib.rs  model.rs
Clients/EchoLens/echolens-perception/src/builder/: mod.rs  prune.rs  scoring.rs  serialize.rs  traversal.rs
Clients/EchoLens/echolens-perception/src/capture/: mod.rs  windows.rs
Clients/EchoLens/echolens-perception/tests/: public_api.rs
Clients/EchoLens/spike/: Cargo.toml  README.md
Clients/EchoVSCode/: .vscodeignore  echo-vscode-0.1.0.vsix  esbuild.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  vite.config.ts
Clients/EchoVSCode/docs/: DESIGN.md
Clients/EchoVSCode/shared/: bridge.ts  protocol.ts
Clients/EchoVSCode/src/: bridge.ts  chat-view-provider.ts  connection-manager.ts  extension.ts  gateway-client.ts  protocol.ts
Clients/EchoVSCode/webview/: App.tsx  index.html  main.tsx  vscode.ts
(+55 files in other folders)
